<resources>
    <string name="app_name">RiderApplication</string>
    <string name="register_text">Register</string>
    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter last name</string>
    <string name="phone_number">Enter Phone number</string>
    <string name="continue_text">Continue</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="sign_out">Sign Out</string>
    <string name="DRIVER_NOT_FOUND">Driver Not Found</string>
    <string name="KEY_NOT_FOUND">key not found</string>
    <string name="permission_require">Permission Required</string>
    <string name="choose_a_saved_place">choose a saved place</string>
    <string name="where_to">Where to ?</string>
    <string name="City_Empty">City is Empty</string>
</resources>